# DUMB

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_ram  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  healthcheck.py  index.html  main.py  pyproject.toml  search.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  setup-workspace.sh
.devcontainer/ubuntu-26.04/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-help.yml  config.yml
.github/workflows/: ci.yml  clear_cache.yml  conventional-commits.yml  docker-image-ram.yml  docker-image.yml  dockerhub-description.yml  fetch-latest-tags.yml  release-please.yaml  test-all-dependabot.yml  test-discord.yml
about/: index.html
api/: api_service.py  api_state.py  connection_manager.py  index.html
api/ai/: index.html
api/auth/: index.html
api/config/: index.html
api/health/: index.html
api/logs/: index.html
api/metrics/: index.html
api/middleware/: auth_middleware.py
architecture/: index.html
cacharr/: cacharr.py  sync_library.py
changelog/: index.html
contributing/: index.html
deployment/: index.html
features/: index.html
frontend/: index.html
getting-started/: index.html
overrides/: main.html
reference/: index.html
scripts/: generate_env_example.py  security_scan.py  verify_project.py
search/: search_index.json
services/: index.html
tests/: test_ai_diagnostics.py  test_ai_router.py  test_altmount_settings.py  test_altmount_setup.py  test_api_state.py  test_arr_installer.py  test_arr_postgres.py  test_arr_postgres_migration.py  test_auth_utils.py  test_auto_update_notifications.py  test_bazarr_setup.py  test_config_router_helpers.py  test_config_schema.py  test_connection_manager.py  test_database_health.py  test_decypharr_settings.py  test_dependencies_auth.py  test_dependency_map.py  test_download.py  test_env_example.py  test_frontend_startup.py  test_health.py  test_jellyfin_installer.py  test_logger_redaction.py  test_logs_router_redaction.py  test_maintainerr_setup.py  test_mediastorm_installer.py  test_mediastorm_setup.py  test_metrics.py  test_metrics_history.py  test_metrics_history_reader.py  test_metrics_history_store.py  test_notifications.py  test_nzbdav_db_security.py  test_nzbdav_rclone_rc.py  test_nzbdav_setup.py  test_oci_image.py  test_plex_status.py  test_postgres_startup.py  test_process_manifest_paths.py  (+22 more)
utils/: ai_diagnostics.py  altmount_settings.py  apt_lock.py  arr.py  arr_postgres.py  arr_postgres_migration.py  auth.py  auth_config.py  auto_update.py  cacharr_settings.py  cli_debrid_permissions.py  config_loader.py  core_services.py  database_health.py  decypharr_settings.py  dependencies.py  dependency_map.py  dmb_config.json  dmb_config_schema.json  download.py  dumb_config.json  dumb_config_schema.json  duplicate_cleanup.py  emby_settings.py  ffprobe_monitor.py  huntarr_settings.py  jellyfin.py  jellyfin_settings.py  logger.py  mediastorm_installer.py  metrics.py  metrics_history.py  metrics_history_reader.py  metrics_history_store.py  metrics_postgres.py  neutarr_settings.py  notifications.py  nzbdav_db.py  nzbdav_settings.py  oci_image.py  (+22 more)
(+126 files in other folders)
